# robot2022-ros

./: README.md  camera_calib.service  testcam.gpfl
scripts/: camera_calib.sh  robot_startup.sh
src/autonomous/src/: ros_node.py
src/diff_drive/: CMakeLists.txt  package.xml  setup.py
src/diff_drive/config/: diff_drive.yaml
src/diff_drive/launch/: demo.launch  rviz_data.launch  vel_to_motor.launch
src/diff_drive/msg/: Angular.msg  BoolArray.msg  Constants.msg  GoalPath.msg  Linear.msg
src/diff_drive/nodes/: diff_drive_go_to_goal  diff_drive_vel_to_motor
src/diff_drive/src/: rviz_data.py
src/diff_drive/src/diff_drive/: goal_controller.py  odometry.py  stanley_steering.py
src/proxy/config/: proxy.yaml
src/proxy/src/: proxy.py
src/robot_launch/launch/: robot_startup.launch
src/robot_pid/config/: robot_pid.yaml
src/robot_pid/src/: robot_pid.py
src/vision_apriltags/: CMakeLists.txt  package.xml
src/vision_apriltags/config/: vision_apriltags.yaml
src/vision_apriltags/launch/: vision_apriltags.launch
src/vision_apriltags/src/: calibration.npz  calibration_old.npz  locations.json  vision_apriltags.py
src/vision_ball/: CMakeLists.txt  package.xml
src/vision_ball/config/: vision_ball.yaml
src/vision_ball/launch/: vision_ball.launch
src/vision_ball/src/: color_filter.py  contour_detection.py  ds.py  vision_ball.py
src/vision_targeting/config/: vision_targeting.yaml
src/vision_targeting/launch/: vision_ball_targeting.launch
src/vision_targeting/src/: ball_detector.py  color_filter.py  contour_detection.py  contour_detector.py  ds.py  (+2 more)
(+55 files in other folders)
